<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:nestedScrollingEnabled="true">
    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".fragment.FragmentDetails">

        <androidx.cardview.widget.CardView
            android:id="@+id/pfpCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            android:elevation="0dp"
            android:translationZ="-10dp"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="8dp">

            <ImageView
                android:id="@+id/pfp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_person_foreground"
                android:contentDescription="@string/user_pfp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pfpCard"
            android:text="@string/username"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:layout_alignTop="@id/pfpCard"
            android:layout_alignBottom="@id/pfpCard"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"/>
        <ImageView
            android:id="@+id/largeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pfpCard"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_image_foreground"
            android:contentDescription="@string/large_image" />
        <ImageView
            android:id="@+id/favorite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/largeImage"
            android:src="@drawable/ic_star_favorite_foreground"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/favorite_icon" />
        <ImageView
            android:id="@+id/download"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/largeImage"
            android:layout_toEndOf="@+id/favorite"
            android:layout_alignTop="@id/favorite"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_download_foreground"
            android:contentDescription="@string/download_icon" />
        <ImageView
            android:id="@+id/setAs"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/largeImage"
            android:layout_toEndOf="@id/download"
            android:layout_alignTop="@id/favorite"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_set_as_foreground"
            android:contentDescription="@string/set_as_icon" />
        <TextView
            android:textSize="14sp"
            android:layout_marginEnd="3dp"
            android:id="@+id/likes"
            android:layout_below="@id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"/>
        <TextView
            android:textSize="14sp"
            android:layout_toEndOf="@id/likes"
            android:layout_below="@id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/likes"
            android:text="@string/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tags"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/likes"
            android:text="@string/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/tags"
            android:text="@string/resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/resolution"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/tags"
            android:text="@string/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/resolution"
            android:text="@string/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/size"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/resolution"
            android:text="@string/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/size"
            android:text="@string/views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/views"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/size"
            android:text="@string/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/views"
            android:text="@string/downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/downloads"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/views"
            android:text="@string/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/downloads"
            android:text="@string/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/comments"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/downloads"
            android:text="@string/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>


    </RelativeLayout>
</ScrollView>
