<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:id="@+id/searchCard"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/grey_200"
        app:cardCornerRadius="10dp"
        android:elevation="0dp"
        android:translationZ="-10dp"
        android:outlineProvider="bounds">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:queryHint="Search"
            app:queryBackground="@android:color/transparent"
            android:queryHint="hint"
            app:defaultQueryHint="hint"
            android:iconifiedByDefault="false"
            app:iconifiedByDefault="false"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/noResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchCard"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="visible"
        android:layout_marginVertical="6dp"
        android:layout_below="@id/searchCard">
        <TextView
            android:id="@+id/noResultsFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results_for"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="gone"
            android:fontFamily="sans-serif-light" />
        <TextView
            android:id="@+id/resultsFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_for"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light" />
        <TextView
            android:id="@+id/query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_query"
            android:layout_marginStart="3dp"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium" />

    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noResult"
        android:layout_marginTop="-6dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"

            app:layout_constraintTop_toBottomOf="@id/noResult"
            app:spanCount="3"
            tools:itemCount="15"
            tools:listitem="@layout/item_explore" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</RelativeLayout>
